--- a/projects/templates/projects/project_form.html
+++ b/projects/templates/projects/project_form.html
@@ -98,9 +98,26 @@
                             data-hs-tom-select-options='{
                             "placeholder": "Select a user..."
                             }' name="members" id="id_members">
-                            <option value="">Select a user...</option>
-                            <option value="1">ravitejajasti</option>
-                            <option value="2">rt</option>
+                            {% if not current_members %}
+                              <option value="">Select a user...</option>
+                            {% endif %}
+                            {% if current_members %}
+                              {% for user in current_members %}
+                              <option value="{{ user.id }}" selected>{{ user.username }}</option>
+                              {% endfor %}
+                              {% endif %}
+                              
+                              {% if non_members %}
+                              {% for user in non_members %}
+                              <option value="{{ user.id }}">{{ user.username }}</option>
+                              {% endfor %}
+                              {% endif %}
+
+                              {% if all_users %}
+                              {% for user in all_users %}
+                              <option value="{{ user.id }}">{{ user.username }}</option>
+                              {% endfor %}
+                            {% endif %}
                     </select>
                 </div>
                 <!-- End Select -->
