basic chat with asgi

--- a/projects/templates/projects/project_form.html
+++ b/projects/templates/projects/project_form.html
@@ -6,12 +6,9 @@
 {% block content %}
 
 
-</div>
-
-
 <!-- Content -->
 
-<div class="container content-space-2">
+<div class="content-space-1">
 <div class="col-sm text-center text-sm-start">
     <a class="link" href="{% url 'project_list' %}">
       <i class="bi-chevron-left small ms-1"></i> Back to Projects
