--- a/projects/templates/projects/task_detail.html
+++ b/projects/templates/projects/task_detail.html
@@ -1,11 +1,8 @@
 {% extends "base.html" %}
 {% block content %}
-<header>
-    <h1>{{ task.name }}</h1>
-</header>
-<div class="container">
+
+    <h1>{{ task.title }}</h1>
     <p>{{ task.description }}</p>
     <a href="{% url 'task_list' task.project.id %}">View Tasks</a> |
     <a href="{% url 'task_edit' task.pk task.project.id %}">Edit Task</a>
-</div>
 {% endblock %}
