--- a/projects/templates/projects/task_form.html
+++ b/projects/templates/projects/task_form.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 
 {% block content %}
-<div class="container">
+<div class="content-space-1">
     <h2>Task Form</h2>
     <form method="post" novalidate>
         {% csrf_token %}
