--- a/templates/base.html
+++ b/templates/base.html
@@ -11,24 +11,131 @@
     <!-- Font -->
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="{% static 'css/style.css' %}">
+    <!-- CSS Implementing Plugins -->
+    <link rel="stylesheet" href="/static/assets/vendor/hs-mega-menu/dist/hs-mega-menu.min.css">
     {% block extra_css %}
     {% endblock %}
 </head>
 <body>
     <main>
-        {% block content %}
-        <!-- This block will be overridden by child templates. -->
-        {% endblock %}
+        {% include 'header.html' %}
+        
+<!-- Card Grid -->
+<div class="container content-space-2 content-space-lg-3">
+    <div class="row col-lg-divider">
+      <div class="col-lg-3">
+        <!-- Navbar -->
+        <div class="navbar-expand-lg">
+          <!-- Navbar Toggle -->
+          <div class="d-grid">
+            <button type="button" class="navbar-toggler btn btn-white mb-3" data-bs-toggle="collapse" data-bs-target="#navbarVerticalNavMenuEg1" aria-label="Toggle navigation" aria-expanded="false" aria-controls="navbarVerticalNavMenuEg1">
+              <span class="d-flex justify-content-between align-items-center">
+                <span class="text-dark">Menu</span>
+  
+                <span class="navbar-toggler-default">
+                  <i class="bi-list"></i>
+                </span>
+  
+                <span class="navbar-toggler-toggled">
+                  <i class="bi-x"></i>
+                </span>
+              </span>
+            </button>
+          </div>
+          <!-- End Navbar Toggle -->
+  
+          <!-- Navbar Collapse -->
+          <div id="navbarVerticalNavMenuEg1" class="collapse navbar-collapse">
+            <div class="d-grid gap-4 flex-grow-1">
+              <div class="d-grid">
+                <h5 class="dropdown-header">Explore</h5>
+                <a class="dropdown-item d-flex justify-content-between" href="#">All <span class="badge text-dark border rounded-pill">30+</span></a>
+                <a class="dropdown-item" href="#">Top rated</a>
+                <a class="dropdown-item" href="#">Featured</a>
+                <a class="dropdown-item" href="#">Daily tools</a>
+                <a class="dropdown-item d-flex justify-content-between" href="#">New <span class="badge text-dark border rounded-pill">18</span></a>
+                <a class="dropdown-item" href="#">Channels</a>
+              </div>
+  
+              <div class="d-grid">
+                <h5 class="dropdown-header">Categories</h5>
+                <a class="dropdown-item" href="#">API management</a>
+                <a class="dropdown-item" href="#">Code quality</a>
+                <a class="dropdown-item" href="#">Code review</a>
+                <a class="dropdown-item d-flex justify-content-between" href="#">Integration <span class="badge text-dark border rounded-pill">4</span></a>
+                <a class="dropdown-item" href="#">File management</a>
+                <a class="dropdown-item" href="#">Mobile</a>
+                <a class="dropdown-item" href="#">Monitoring</a>
+                <a class="dropdown-item" href="#">Publishing</a>
+                <a class="dropdown-item d-flex justify-content-between" href="#">Security <span class="badge text-dark border rounded-pill">20</span></a>
+                <a class="dropdown-item d-flex justify-content-between" href="#">File management <span class="badge text-dark border rounded-pill">1</span></a>
+              </div>
+  
+              <div class="d-grid">
+                <h5 class="dropdown-header">Filters</h5>
+                <a class="dropdown-item d-flex justify-content-between" href="#">Free <span class="badge text-dark border rounded-pill">9+</span></a>
+                <a class="dropdown-item" href="#">Free trial</a>
+              </div>
+  
+              <div class="d-grid">
+                <h5 class="dropdown-header">Verification</h5>
+                <a class="dropdown-item" href="#">Verified</a>
+                <a class="dropdown-item" href="#">Unverified</a>
+              </div>
+            </div>
+          </div>
+          <!-- End Navbar Collapse -->
+        </div>
+        <!-- End Navbar -->
+      </div>
+      <!-- End Col -->
+  
+      <div class="col-lg-9">
+          
+            {% block content %}
+            <!-- This block will be overridden by child templates. -->
+            {% endblock %}
+        </div>
+        <!-- End Col -->
+      </div>
+      <!-- End Row -->
+    </div>
+    <!-- End Card Grid -->        
     </main>
 
     <footer>
         <p>&copy; 2024 Agency Portal</p>
     </footer>
     <!-- JS Global Compulsory -->
-    <script src="/static/assets/vendor/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
+    <!-- <script src="/static/assets/vendor/bootstrap/dist/js/bootstrap.bundle.min.js"></script> -->
+    <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.4.1/dist/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
+
     
     <!-- JS Front -->
     <script src="/static/assets/js/hs.core.js"></script>
+
+    <!-- JS Implementing Plugins -->
+    <script src="/static/assets/vendor/hs-header/dist/hs-header.min.js"></script>
+    <script src="/static/assets/vendor/hs-mega-menu/dist/hs-mega-menu.min.js"></script>
+
+    <!-- JS Plugins Init. -->
+    <script>
+    (function() {
+        // INITIALIZATION OF HEADER
+        // =======================================================
+        new HSHeader('#header').init()
+
+
+        // INITIALIZATION OF MEGA MENU
+        // =======================================================
+        new HSMegaMenu('.js-mega-menu', {
+            desktop: {
+            position: 'left'
+            }
+        })
+    })()
+    </script>
     {% block extra_js %}
     {% endblock %}
     
