--- a/chat/templates/chat/chat_room.html
+++ b/chat/templates/chat/chat_room.html
@@ -1,11 +1,50 @@
 {% extends 'base.html' %}
+{% load static %}
 {% block content %}
 <div class="container">
-    <h2>Chat Room: {{ room.name }}</h2>
+    <!-- Heading -->
+  <div class="border-bottom pb-4 mb-4">
+    <div class="row align-items-center">
+      <div class="col-sm-6 mb-2 mb-sm-0">
+        <h3 class="mb-0">Chat Room: {{ room.name }}</h3>
+      </div>
+      <!-- End Col -->
+    </div>
+    <!-- End Row -->
+  </div>
+  <!-- End Heading -->
     <div id="chat-log">
+        <!-- Comment -->
+        <ul class="list-comment list-comment-divider mb-3 mt-3">
         {% for message in messages %}
-        <p><strong>{{ message.user.username }}:</strong> {{ message.message }}</p>
-        {% endfor %}
+
+            <!-- Item -->
+            <li class="list-comment-item border-bottom">
+            <!-- Media -->
+            <div class="d-flex align-items-start mb-3">
+                <div class="flex-shrink-0">
+                <img class="avatar avatar-sm avatar-circle" src="{% static 'assets/img/160x160/img3.jpg' %}" alt="Image Description">
+                </div>
+
+                <div class="flex-grow-1 ms-3">
+                <div class="d-flex justify-content-between align-items-center">
+                    <h5 class="mb-0">{{ message.user.username }}</h5>
+                    <span class="d-block small text-muted">April 3, 2019</span>
+                </div>
+                <!-- Start Message -->
+                <div class="mb-5">
+                    <p>{{ message.message }}</p>
+                </div>
+                <!-- End Message -->
+                </div>
+            </div>
+            <!-- End Media -->
+            </li>
+            <!-- End Item -->
+            {% endfor %}
+
+        </ul>
+        <!-- End Comment -->
     </div>
     <input id="chat-message-input" type="text" size="100">
     <input id="chat-message-submit" type="button" value="Send">
