--- a/templates/base.html
+++ b/templates/base.html
@@ -122,7 +122,7 @@
   {% endblock %}
 </head>
 
-<body class="has-navbar-vertical-aside navbar-vertical-aside-show-xl">
+<body class="has-navbar-vertical-aside navbar-vertical-aside-show-xl footer-offset">
 
   <script src="{% static 'assets/js/hs.theme-appearance.js' %}"></script>
   
