--- a/projects/templates/projects/task_list.html
+++ b/projects/templates/projects/task_list.html
@@ -16,6 +16,28 @@
 
 {% block content %}
 
+<!-- Toast -->
+<div id="liveToast" class="position-fixed toast hide alert alert-success" role="alert" aria-live="assertive" aria-atomic="true" style="top: 20px; right: 40%; z-index: 1000;">
+  <!-- <div class="toast-header"> -->
+  <div>
+    <div class="d-flex align-items-center flex-grow-1">
+      <div class="flex-grow-1 ms-3">
+
+        <div class="mb-0" id="toastMessage">Task Updated
+        <a href="#" class="toast-link alert-link">View Task</a>  
+        </div>
+      </div>
+      <div class="text-end">
+        <button type="button" class="btn-close" data-bs-dismiss="toast" aria-label="Close"></button>
+      </div>
+    </div>
+  </div>
+  <!-- <div class="toast-body">
+    Hello, world! This is a toast message.
+  </div> -->
+</div>
+<!-- End Toast -->
+
     <!-- Content -->
     <div class="content container-fluid">
         <!-- Page Header -->
@@ -158,7 +180,7 @@
                         <div class="d-flex mb-5">
                           <div class="me-2">
                             <h4 class="text-wrap">{{ task.title }}</h4>
-                            <a class="stretched-link" href="{% url 'task_detail' project_id task.pk %}"></a>
+                            <a class="stretched-link" type="button"   data-bs-toggle="offcanvas" data-task-id = {{ task.pk }} data-bs-target="#offcanvasRightUpdate" aria-controls="offcanvasRightUpdate" href="{% url 'task_detail' project_id task.pk %}"></a>
   
                             <!-- Avatar Group -->
                             <div class="avatar-group avatar-group-sm">
@@ -249,11 +271,22 @@
 
                   </div>
                   <!-- End Card -->
+
                   {% empty %}
                   <p>No tasks in this section.</p>
                   {% endfor %}
                 </div>
-  
+
+                <!-- Start OffCanvasRightUpdate -->
+                <div class="offcanvas offcanvas-end" data-bs-scroll="true" data-bs-backdrop="false" tabindex="-1" id="offcanvasRightUpdate" aria-labelledby="offcanvasRightUpdateLabel">
+                  <div class="offcanvas-header">
+                    <h2 class="offcanvas-title" id="offcanvasRightUpdateLabel">Update Task</h2>
+                    <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+                  </div>
+                  <div class="offcanvas-body" id="UpdatetaskFormPlaceholder">
+                  </div>
+                </div>
+                <!-- End OffCanvasRightUpdate -->
                 <!-- Container For Input Field -->
                 <div id="createProjectGridContainerToDo"></div>
   
@@ -1242,7 +1275,7 @@
         </div>
       </div>
       <!-- End Tab Content -->
-
+      
 {% endblock %}
 
 {% block sec_contents %}
@@ -1376,6 +1409,7 @@ $(document).ready(function() {
             url: "{% url 'task_create' project_id %}", // Adjust URL as needed
             type: "get",
             dataType: "html",
+            cache: false,
             success: function(data) {
                 $("#taskFormPlaceholder").html(data);
             }
@@ -1383,9 +1417,40 @@ $(document).ready(function() {
     });
 });
 </script>
+
+
+<script>
+  $(document).ready(function() {
+    // Delegate click event to dynamically loaded elements as well
+    $('[data-bs-target="#offcanvasRightUpdate"]').click(function() {
+      console.log("Canvas opened")
+      var task_Id = $(this).data('task-id');
+      console.log(task_Id)
+      $.ajax({
+        url: "{% url 'task_edit' project_id 0 %}".replace('0', task_Id),
+        type: "get",
+        dataType: "html",
+        cache: false,
+        success: function(data) {
+          $("#UpdatetaskFormPlaceholder").html(data);
+          var offcanvasInstance = new bootstrap.Offcanvas($('#offcanvasRightUpdate'));
+          offcanvasInstance.show();
+        },
+        error: function(xhr, status, error) {
+          console.log("Error fetching task edit form:", status, error);
+        }
+      });
+    });
+  });
+  
+  </script>
+  
 <script>
 $(document).on('submit', '#taskForm', function(e) {
     e.preventDefault();
+    var formAction = $(this).data('action');
+
+    if (formAction === 'create') {
     $.ajax({
         url: "{% url 'task_create' project_id %}",
         type: $(this).attr('method'),
@@ -1394,13 +1459,25 @@ $(document).on('submit', '#taskForm', function(e) {
           xhr.setRequestHeader("X-CSRFToken", "{{ csrf_token }}");
       },
         success: function(response) {
+
           if(response.success) {
             // Close the off-canvas
-            var offcanvasInstance = bootstrap.Offcanvas.getInstance($('#offcanvasRight'));
-            offcanvasInstance.hide();
+            // var offcanvasInstance = bootstrap.Offcanvas.getInstance($('#offcanvasRightUpdate'));
+            // offcanvasInstance.hide();
+            $('#offcanvasRight').offcanvas('hide');
+
+            // Dynamically update the message part
+            var defaultMessage = "Task created successfully";
+            var iconHtml = '<i class="bi bi-check-circle-fill" style="color: #fff; margin-right: 5px;"></i>';
+            var message = response.message || defaultMessage;
+            var linkText = "Details"; // Or any default link text you prefer
+            var url = "{% url 'task_detail' project_id 0 %}".replace('0', response.pk ) || "#"; // Default URL if none is provided
+
+            $('#liveToast #toastMessage').html(iconHtml + message + '<a href="' + url + '" class="toast-link alert-link"><u>' + linkText + '</u> <i class="bi bi-box-arrow-up-right"></a>');
 
             // Optionally, refresh the task list or show a success message
-            alert("Task added successfully");
+            const liveToast = new bootstrap.Toast(document.querySelector('#liveToast'));  
+            liveToast.show();
         }
         },
         error: function(xhr, status, error) {
@@ -1426,7 +1503,79 @@ $(document).on('submit', '#taskForm', function(e) {
           }
       }
     });
+  };
 });
 </script>
 
+<script>
+  $(document).on('submit', '#taskForm', function(e) {
+      e.preventDefault();
+      var formAction = $(this).data('action');
+      var url = $(this).attr('action'); 
+      if (formAction === 'edit') {
+      $.ajax({
+          url: url,
+          type: $(this).attr('method'),
+          data: $(this).serialize() + "&csrfmiddlewaretoken=" + $("input[name=csrfmiddlewaretoken]").val(),
+          beforeSend: function(xhr) {
+            xhr.setRequestHeader("X-CSRFToken", "{{ csrf_token }}");
+        },
+          success: function(response) {
+            if(response.success) {
+              // Close the off-canvas
+              // var offcanvasInstance = bootstrap.Offcanvas.getInstance($('#offcanvasRightUpdate'));
+              // offcanvasInstance.hide();
+              $('#offcanvasRightUpdate').offcanvas('hide'); 
+              
+              // Dynamically update the message part
+              var defaultMessage = "Task updated successfully";
+              var iconHtml = '<i class="bi bi-check-circle-fill" style="color: #fff; margin-right: 5px;"></i>';
+              var message = response.message || defaultMessage;
+              var linkText = "Details"; // Or any default link text you prefer
+              var url = "{% url 'task_detail' project_id 0 %}".replace('0', response.pk ) || "#"; // Default URL if none is provided
+
+              $('#liveToast #toastMessage').html(iconHtml + message + '<a href="' + url + '" class="toast-link alert-link"><u>' + linkText + '</u> <i class="bi bi-box-arrow-up-right"></a>');
+
+              // Optionally, refresh the task list or show a success message
+              const liveToast = new bootstrap.Toast(document.querySelector('#liveToast'));  
+              liveToast.show();
+            }
+          },
+          error: function(xhr, status, error) {
+            // Handle form errors
+            if (xhr.status === 400) {
+                // Clear previous errors
+                $('.form-error').remove();
+  
+                // Parse the JSON response
+                var errors = JSON.parse(xhr.responseText);
+  
+                // Loop through the errors and display them
+                for (var key in errors) {
+                    if (errors.hasOwnProperty(key)) {
+                        // Append each error message to the respective form field
+                        var error = errors[key].join();
+                        $('<div class="form-error">' + error + '</div>').insertAfter('#id_' + key);
+                    }
+                }
+            } else {
+                // Handle non-validation errors (optional)
+                console.error("An error occurred: ", status, error);
+            }
+        }
+      });
+    };
+  });
+  </script>
+  <script>
+    (function() {
+      // INITIALIZATION OF FLATPICKR
+      // =======================================================  
+      HSCore.components.HSFlatpickr.init('.js-flatpickr')
+
+      // INITIALIZATION OF SELECT
+      // =======================================================
+      HSCore.components.HSTomSelect.init('.js-select')
+    })();
+  </script> 
 {% endblock %}
