--- a/chat/templates/chat/chat_room.html
+++ b/chat/templates/chat/chat_room.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 {% load static %}
 {% block extra_css %}
-<script src="https://cdn.tiny.cloud/1/ur42dgvrke8vi1m22i4tvk9wasd9pa4ulreswd7f3hcy4qwq/tinymce/5/tinymce.min.js" referrerpolicy="origin"></script>
+<!-- <script src="https://cdn.tiny.cloud/1/ur42dgvrke8vi1m22i4tvk9wasd9pa4ulreswd7f3hcy4qwq/tinymce/5/tinymce.min.js" referrerpolicy="origin"></script> -->
 <link rel="stylesheet" href="{% static 'assets/vendor/quill/dist/quill.snow.css' %}">
 
 {% endblock %}
@@ -91,13 +91,30 @@
           <!-- Sticky Block End Point -->
           <div id="stickyBlockEndPoint"></div>
           <!-- TinyMCE Form -->
-          <form id="message-form">
+          <!-- <form id="message-form">
             <textarea id="message-input" name="content"></textarea>
             <button type="submit" class="btn btn-primary">Send</button>
         </form>
-        {{ room.id|json_script:'room-id' }}
+        {{ room.id|json_script:'room-id' }} -->
           <!-- End TinyMCE Form -->
-
+          
+          <!-- Quill -->
+          <div class="quill-custom mb-3">
+            <div class="js-quill" style="height: 15rem;" data-hs-quill-options='{
+                  "placeholder": "Type your description...",
+                  "modules": {
+                    "toolbar": [
+                      ["bold", "italic", "underline", "strike", "link", "image", "blockquote", "code", {"list": "bullet"}]
+                    ]
+                  }
+                  }'>
+            </div>
+          </div>
+          <div class="d-flex justify-content-end gap-3 mb-3">
+            <button id="submitMessage" class="btn btn-primary">Send</button>
+          </div>  
+          <!-- End Quill -->
+        {{ room.id|json_script:'room-id' }}
         </div>
     </div>
 </div>
@@ -108,8 +125,29 @@
 
 {% block extra_js %}
 <script src="{% static 'assets/vendor/quill/dist/quill.min.js' %}"></script>
-
 <script>
+  (function() {
+      window.onload = function () {
+      // INITIALIZATION OF QUILLJS EDITOR
+      // =======================================================
+      HSCore.components.HSQuill.init('.js-quill')
+      HSCore.components.HSQuill.init('.js-quill-step')
+  }
+})()
+</script>
+<script>
+  var quill = new Quill('.js-quill', {
+    theme: 'snow',
+    placeholder: 'Type your description...',
+        modules: {
+            toolbar: [
+                ["bold", "italic", "underline", "strike", "link", "image", "blockquote", "code", {"list": "bullet"}]
+            ]
+        }
+  });
+</script>
+
+<!-- <script>
     tinymce.init({
         selector: '#message-input',
         theme: 'silver',
@@ -175,7 +213,7 @@
             // Additional setup code here...
         },
     });
-</script>
+</script> -->
 <script>
     const roomName = JSON.parse(document.getElementById('room-id').textContent);
     const chatSocket = new WebSocket(
@@ -194,16 +232,32 @@
     chatSocket.onclose = function(e) {
         console.error('Chat socket closed unexpectedly');
     };
+    // tinyMCE code
+    // document.querySelector('#message-form').onsubmit = function(e) {
+    //  e.preventDefault();
+    //  const messageInputDom = tinymce.get("message-input").getContent();
+    //  const message = messageInputDom;
+    //  chatSocket.send(JSON.stringify({
+    //      'message': message
+    //  }));
+    //  tinymce.get("message-input").setContent('');
+  //};
+    // End tinyMCE code
 
-    document.querySelector('#message-form').onsubmit = function(e) {
-        e.preventDefault();
-        const messageInputDom = tinymce.get("message-input").getContent();
-        const message = messageInputDom;
-        chatSocket.send(JSON.stringify({
-            'message': message
-        }));
-        tinymce.get("message-input").setContent('');
-    };
+    document.querySelector('#submitMessage').onclick = function(e) {
+      e.preventDefault();
+
+      // You retrieve the content of the Quill editor like so:
+      const message = quill.root.innerHTML; // Get the HTML content
+  
+      // Assuming 'chatSocket' is already defined and connected
+      chatSocket.send(JSON.stringify({
+          'message': message
+      }));
+  
+      // Clear the content of the Quill editor
+      quill.setContents([]);
+  };
 </script>
 <script>
     // Function to scroll to the bottom of the chat log
@@ -219,39 +273,3 @@
 </script>
 
 {% endblock %}
-
-###########
-<script>
-    (function() {
-        window.onload = function () {
-        // INITIALIZATION OF QUILLJS EDITOR
-        // =======================================================
-        HSCore.components.HSQuill.init('.js-quill')
-        HSCore.components.HSQuill.init('.js-quill-step')
-    }
-})()
-</script>
-        <!-- Quill -->
-        <div class="quill-custom">
-            <div class="js-quill" style="height: 15rem;" data-hs-quill-options='{
-                    "placeholder": "Type your description...",
-                    "modules": {
-                    "toolbar": [
-                        ["bold", "italic", "underline", "strike", "link", "image", "blockquote", "code", {"list": "bullet"}]
-                    ]
-                    }
-                    }'>
-            </div>
-            </div>
-            <!-- End Quill -->
-            <!-- </div> -->
-            <!-- Body -->
-    
-            <!-- Footer -->
-            <div class="card-footer">
-                <div class="d-flex justify-content-end gap-3">
-                <button type="submit" class="btn btn-white">Discard</button>
-                <button type="submit" class="btn btn-primary">Save changes</button>
-                </div>
-            </div>
-            <!-- End Footer -->
