added comments section UI

--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -162,7 +162,7 @@
                 </a>
 
                 <div id="navbarVerticalMenuPagesProjectsMenu" class="nav-collapse collapse " data-bs-parent="#navbarVerticalMenuPagesMenu">
-                  <a class="nav-link " href="../projects.html">Overview</a>
+                  <a class="nav-link " href="{% url 'project_list' %}">Overview</a>
                   <a class="nav-link " href="../projects-timeline.html">Timeline</a>
                 </div>
               </div>
