--- a/projects/templates/projects/project_list.html
+++ b/projects/templates/projects/project_list.html
@@ -921,7 +921,7 @@
         <li class="step-item">
           <div class="step-content-wrapper">
             <div class="step-avatar">
-              <img class="step-avatar" src="{% static 'assets/img/160x160/img9.jgp' %}" alt="Image Description">
+              <img class="step-avatar" src="{% static 'assets/img/160x160/img9.jpg' %}" alt="Image Description">
             </div>
 
             <div class="step-content">
@@ -994,7 +994,7 @@
         <li class="step-item">
           <div class="step-content-wrapper">
             <div class="step-avatar">
-              <img class="step-avatar-img" src="{% static 'assets/img/160x160/img3.jgp' %}" alt="Image Description">
+              <img class="step-avatar-img" src="{% static 'assets/img/160x160/img3.jpg' %}" alt="Image Description">
             </div>
 
             <div class="step-content">
@@ -1049,7 +1049,7 @@
         <li class="step-item">
           <div class="step-content-wrapper">
             <div class="step-avatar">
-              <img class="step-avatar-img" src="{% static 'assets/img/160x160/img7.jgp' %}" alt="Image Description">
+              <img class="step-avatar-img" src="{% static 'assets/img/160x160/img7.jpg' %}" alt="Image Description">
             </div>
 
             <div class="step-content">
@@ -1067,7 +1067,7 @@
         <li class="step-item">
           <div class="step-content-wrapper">
             <div class="step-avatar">
-              <img class="step-avatar-img" src="{% static 'assets/img/160x160/img5.jgp' %}" alt="Image Description">
+              <img class="step-avatar-img" src="{% static 'assets/img/160x160/img5.jpg' %}" alt="Image Description">
             </div>
 
             <div class="step-content">
